--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -30,6 +30,14 @@
 	font-family: $regular
 	line-height: 1.5
 
+.product-info__rate
+	display: flex
+	justify-content: flex-end	
+	width: 50%
+
+	.spr-icon
+		font-size: 90%
+
 .product-info__was__price
 	color: #000
 	font-family: $regular
@@ -40,6 +48,11 @@
 	color: red
 	font-family: $bold
 	font-size: 24px 
+	line-height: 1.5
+
+.product-info__current__price
+	font-family: $bold
+	font-size: 24px
 	line-height: 1.5
 
 .product-info__size-boxes
@@ -146,7 +159,7 @@
 	border: 1px solid $gray
 	display: flex
 	justify-content: center
-	font-size: 15px
+	font-size: 14px
 	font-family: $light	
 	margin-bottom: 20px
 	padding: 15px
