--- a/sections/featured_products_home.liquid
+++ b/sections/featured_products_home.liquid
@@ -19,7 +19,7 @@
 								</a>
 							</div>
 							<div class="product__body">
-								<div class="product__size">em-el</div>
+								<div class="product__size">{{product.vendor}}</div>
 								<div class="product__descr">{{product.title}}</div>
 								<div class="product__price">{{product.price | money}}</div>
 								<div class="product__rate"><img src="{{ '5-stars.png' | asset_url }}" alt="5 stars"></div>
