--- a/snippets/product_detail.liquid
+++ b/snippets/product_detail.liquid
@@ -7,7 +7,7 @@
             </a>
         </div>
         <div class="product__body">
-            <div class="product__size">em-el</div>
+            <div class="product__size">{{product.vendor}}</div>
             <div class="product__descr">{{product.title | scape}}</div>
             <div class="product__price">{{product.price | money}}</div>
             <div class="product__rate">{%- include "rate_reviews" -%}</div>
