I removed the search icon on the mobile design

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -51,7 +51,7 @@
                 <form class="mobile-nav__search-form">
                   <input class="mobile-nav__input main-nav__search-form-input" placeholder="Search...">
                 </form>
-                <a href="#" class="mobile-nav__item mobile-nav__item-search"><img src="{{ 'search-dark.png' | asset_url }}" alt="search" ></a>
+                <!--<a href="#" class="mobile-nav__item mobile-nav__item-search"><img src="{{ 'search-dark.png' | asset_url }}" alt="search" ></a>-->
                 <a href="#login-popup" class="mobile-nav__item popup"><img src="{{ 'user-dark.png' | asset_url }}" alt="search" ></a>
                 <a href="#" class="mobile-nav__item"><img src="{{ 'cart-dark.png' | asset_url }}" alt="search" ></a>
               </div>
