I removed more info/promo bar section

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,4 @@
-  <div class="promo-bar">More info/promo bar</div>  
-
+  <!--<div class="promo-bar">More info/promo bar</div>  -->
   <header>
     <div class="top-nav">
       <div class="container-fluid">
