--- a/web-flair/app/sass/blocks/top-nav/_top-nav.sass
+++ b/web-flair/app/sass/blocks/top-nav/_top-nav.sass
@@ -49,5 +49,11 @@
 .top-nav__nav-item_icon_user
 	background-image: url(../img/user.png)
 
+
+
 .top-nav__nav-item_icon_cart
 	background-image: url(../img/cart.png)
+
+
+.top-nav__nav-item_logout-link
+	padding-left: 8px
