--- a/web-flair/app/sass/main.sass
+++ b/web-flair/app/sass/main.sass
@@ -113,6 +113,8 @@
 
 @import "blocks/mobile-nav/mobile-nav"
 
+@import "blocks/customers/customers"
+
 
 ////////////////////////////////////////
 
