--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,7 +28,8 @@
   {% include 'social-meta-tags' %}
     <!--End of Ivan's BS -->
 
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ 
 	  {{ 'main.min.css'  | asset_url | stylesheet_tag }}
 		{% include 'globo-megamenu-script' %}
 		{{ content_for_header }}
@@ -45,6 +46,8 @@
 		</script>
 		<!-- End Affirm -->
 
+    {{ "shopify_common.js"  | shopify_asset_url | script_tag }}
+    {{ "customer_area.js"  | shopify_asset_url | script_tag }}
 </head>
 
 <body class="body template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}">  
@@ -56,25 +59,36 @@
   </main>  
 
   {%- section 'footer' -%}
-
-
+  
 	<div class="d-none">
 
 		<div id="login-popup" class="login-popup popup-window">
 			<div class="login-popup__left-part">
-				<form class="account-form">
+				{% form 'create_customer', class: 'account-form'  %}
+				  {{ form.errors | default_errors }}
 					<div class="account-form__title">Create an Account</div>
 					<div class="account-form__body">
-						<input type="text" class="input-text account-form__input-text" placeholder="EMAIL ADDRESS">
-						<input type="text" class="input-text account-form__input-text" placeholder="PASSWORD">
-						<input type="text" class="input-text account-form__input-text" placeholder="CONFIRM PASSWORD">
-						<input type="text" class="input-text account-form__input-text input-text_width_sm" placeholder="CAPTCHA">
-						<input type="submit" class="form-button" value="Login">
+
+					<label for="first_name">First Name</label>
+					<input class="input-text account-form__input-text" type="text" value="" name="customer[first_name]" size="30" required />
+
+					<label for="last_name">Last Name</label>
+					<input class="input-text account-form__input-text" type="text" value="" name="customer[last_name]" size="30" required />
+
+					<label for="email">Email Address</label>
+					<input class="input-text account-form__input-text" type="email" value="" name="customer[email]" size="30" required />
+
+					<label for="password">Password</label>
+					<input class="input-text account-form__input-text" type="password" value="" name="customer[password]" size="30" required />
+						
+						<input type="submit" class="form-button" value="Create">
 					</div>
 					<div class="account-form__text-under-form">
-						Have an account? <a href="#" class="quick-link">Login</a>
+						Have an account? <a href="/account/login" class="quick-link">Login</a>
 					</div>
-				</form>
+				{% endform %}
+
+
 			</div>
 			<div class="login-popup__right-part">
 				<img src="{{ 'login-image.png' | asset_url }}" alt="Login" class="img-responsive img-width">
