--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -8,8 +8,13 @@
               <div class="top-nav__text">Free Shipping! On all Purchases</div>
               <div class="top-nav__nav">
                 <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_phone">1-877-653-3877</a>
-                <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_chat">Live chat</a>
-                <a href="#login-popup" class="top-nav__nav-item top-nav__nav-item_icon_user popup">login/Sign Up</a>
+                <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_chat">Live chat</a>                                   
+                {% if customer %}
+                  <a href="/account" class="top-nav__nav-item top-nav__nav-item_icon_user">{{ customer.first_name }}</a> |  
+                  {{ 'Log out' | customer_logout_link | replace: '<a', '<a class="top-nav__nav-item top-nav__nav-item_logout-link"' }}
+                {% else %}
+                    <a href="/account/register" class="top-nav__nav-item top-nav__nav-item_icon_user">login/Sign Up</a>
+                {% endif %}
                 <a href="/cart" class="top-nav__nav-item top-nav__nav-item_icon_cart">Bag</a>
               </div>
             </div>
@@ -51,7 +56,14 @@
                   <input class="mobile-nav__input main-nav__search-form-input" placeholder="Search...">
                 </form>
                 <!--<a href="#" class="mobile-nav__item mobile-nav__item-search"><img src="{{ 'search-dark.png' | asset_url }}" alt="search" ></a>-->
-                <a href="#login-popup" class="mobile-nav__item popup"><img src="{{ 'user-dark.png' | asset_url }}" alt="search" ></a>
+
+                {% if customer %}
+                    <a href="/account" class="mobile-nav__item popup"><img src="{{ 'user-dark.png' | asset_url }}" alt="User" ></a>                  
+                {% else %}
+                    <a href="/account/register" class="mobile-nav__item popup"><img src="{{ 'user-dark.png' | asset_url }}" alt="User" ></a>
+                {% endif %}
+
+                
                 <a href="#" class="mobile-nav__item"><img src="{{ 'cart-dark.png' | asset_url }}" alt="search" ></a>
               </div>
 
