--- a/web-flair/app/sass/blocks/main-contact/_main-contact.sass
+++ b/web-flair/app/sass/blocks/main-contact/_main-contact.sass
@@ -18,6 +18,8 @@
 
 .main-contact__banner-descr
 	font-family: $light
+	padding-left: 25px
+	padding-right: 25px
 
 .main-contact__content
 	margin-top: -80px
