--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -60,78 +60,8 @@
 
   {%- section 'footer' -%}
   
-	<div class="d-none">
-
-		<div id="login-popup" class="login-popup popup-window">
-			<div class="login-popup__left-part">
-				{% form 'create_customer', class: 'account-form'  %}
-				  {{ form.errors | default_errors }}
-					<div class="account-form__title">Create an Account</div>
-					<div class="account-form__body">
-
-					<label for="first_name">First Name</label>
-					<input class="input-text account-form__input-text" type="text" value="" name="customer[first_name]" size="30" required />
-
-					<label for="last_name">Last Name</label>
-					<input class="input-text account-form__input-text" type="text" value="" name="customer[last_name]" size="30" required />
-
-					<label for="email">Email Address</label>
-					<input class="input-text account-form__input-text" type="email" value="" name="customer[email]" size="30" required />
-
-					<label for="password">Password</label>
-					<input class="input-text account-form__input-text" type="password" value="" name="customer[password]" size="30" required />
-						
-						<input type="submit" class="form-button" value="Create">
-					</div>
-					<div class="account-form__text-under-form">
-						Have an account? <a href="/account/login" class="quick-link">Login</a>
-					</div>
-				{% endform %}
 
 
-			</div>
-			<div class="login-popup__right-part">
-				<img src="{{ 'login-image.png' | asset_url }}" alt="Login" class="img-responsive img-width">
-				<div class="login-popup__text">
-					<div class="login-popup__text-title">Ml Furs Advantage</div>
-					<div class="login-popup__list">
-						<li class="login-popup__list-item">Lorem ipsum dolor sit amet.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor sit.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor sit.</li>
-						<li class="login-popup__list-item">Lorem ipsum.</li>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		<div id="sale-popup" class="sale-popup popup-window">
-			<div class="sale-popup__left-part"></div>
-			<div class="sale-popup__right-part">
-				<form class="sale-form">
-					<div class="sale-form__header">
-						<div class="sale-form__header-title">Wait!</div>
-						<div class="sale-form__header-descr">Looks Like You`re Leaving before Getting Your Special Offer</div>
-					</div>
-					<div class="sale-form__body">
-						<div class="sale-form__descr">
-							<div class="sale-form__descr-left">
-								Save <br>
-								<span>10%</span>
-							</div>
-							<div class="sale-form__descr-right">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum architecto porro
-							</div>
-						</div>
-						<input type="text" class="input-text sale-form__input-text" placeholder="EMAIL ADDRESS">
-						<input type="submit" class="form-button" value="Get 10% off on your next order">
-					</div>
-				</form>
-			</div>
-		</div>
-
-	</div>
   {{ 'theme.js' | asset_url | script_tag }}
 	{{ 'scripts.min.js' | asset_url | script_tag }}
   {{ 'common.js' | asset_url | script_tag }}
@@ -140,8 +70,13 @@
      {{ 'products.js' | asset_url | script_tag }}
   {%- endif -%}
 
+
+
   {%- if template.name == 'collection' -%}
      {{ 'collections.js' | asset_url | script_tag }}
+   
+		 <script>
+		 </script>
   {%- endif -%}
 	
 
