--- a/sections/contact.liquid
+++ b/sections/contact.liquid
@@ -6,7 +6,7 @@
 					<div class="main-contact__banner" style="background-image: url({{ section.settings.banner | img_url: 'master' }})">
 						<div class="main-contact__banner-title">Contact us</div>
 						<div class="main-contact__banner-descr">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta autem,<br> vero ratione pariatur aut non ab, qui nemo molestias magnam<br> voluptatem, repudiandae. Voluptas iste dolorum accusamus
+							{{section.settings.description}}
 						</div>
 					</div>
 					<div class="main-contact__content">
@@ -17,14 +17,14 @@
 										<div class="contact-map__info-block contact-map__info-block_theme_brown">
 											<div class="contact-map__info-title">Marks-Lloyds Furs</div>
 											<div class="contact-map__info-address">
-												<div class="contact-map__info-descr">Lorem ipsum dolor <br>sit amet</div>
-												<a href="#" class="contact-map__location-link location-link">Directions</a>
+												<div class="contact-map__info-descr">263 Josephine St.<br>Denver, CO 80206</div>
+												<a href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=263+Josephine+St.+Denver,+CO+80206&sll=37.0625,-95.677068&sspn=41.546728,93.076172&ie=UTF8&hq=&hnear=263+Josephine+St,+Denver,+Colorado+80206&z=16" class="contact-map__location-link location-link">Directions</a>
 											</div>
 										</div>
 										<div class="contact-map__info-block">
 											<div class="contact-map__info-descr">
 												<a class="contact-map__info-link" href="tel:3033222287">303-322-22-87</a><br>
-												<a class="contact-map__info-link" href="tel:3033222287">1-877-mlf-furs (1-877-653-3877)</a>
+												<a class="contact-map__info-link" href="tel:3033222287">1-877-mlf-furs <br >(1-877-653-3877)</a>
 											</div>
 										</div>
 										<div class="contact-map__info-block">
@@ -34,7 +34,7 @@
 												Sunday 11am - 3pm
 											</div>
 											<div class="contact-map__info-descr">
-												Lorem ipsum dolor sit amet, consectetur.
+												Football games are televised on Saturdays and Sundays.
 											</div>
 										</div>
 									</div>
@@ -43,7 +43,7 @@
 									</div>
 								</div>
 								<div class="main-contact__map-descr">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas sunt distinctio dolore <br>asperiores totam deleniti quisquam amet temporibus ratione illo. Laudantium maxime <br>molestias natus et sapiente at aut, debitis atque.
+								   Marks-Lloyds Furs is conveniently located in Cherry Creek North at 263 Josephine St.; where University Boulevard becomes a one-way traveling North, between 2nd and 3rd Ave. on the West side of the street.   Free validated parking in the US bank building located at 210 University BLVD.
 								</div>
 							</div>
 						</div>
@@ -63,7 +63,12 @@
       "id": "banner",
       "type": "image_picker",
       "label": "Banner"
-    } 
+    },
+    {
+      "id": "description",
+      "type": "richtext",
+      "label": "Description"
+    }	 
   ]
 }
 {% endschema %}
