I worked on different tasks, quick  view, footer, changed swatches

--- a/assets/common.js.liquid
+++ b/assets/common.js.liquid
@@ -216,8 +216,16 @@ $(function() {
         hideElement: containerSelector
       });
     });
-
 });
+
+
+$(window).on("scroll", function() {
+   let allinone_bar_fixed = $("#allinone_bar_fixed");
+  
+   if (allinone_bar_fixed.length) { //already exists the div
+       $("#shopify-section-header").css("margin-top", "50px");
+   }
+})
 
 
 
