--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -44,25 +44,12 @@
 								</li>
 
 								<li class="footer__social-item footer__social-item_blured">
-								   <a class="footer__list-link" href="#" target="_blank">
+								   <a class="footer__list-link" href="https://www.instagram.com/mlfurs/" target="_blank">
 								      <span style="width: 16px;"><img src="{{ 'inst.png' | asset_url }}" alt="tw"></span>
 								      &nbsp; Instagram
 								   </a>
 								</li>																
 
-								<li class="footer__social-item footer__social-item_blured">
-								   <a class="footer__list-link" href="#" target="_blank">
-								      <span style="width: 16px;"><img src="{{ 'yt.png' | asset_url }}" alt="tw"></span>
-								      &nbsp; Youtube
-								   </a>
-								</li>								
-
-								<li class="footer__social-item footer__social-item_blured">
-								   <a class="footer__list-link" href="#" target="_blank">
-								      <span style="width: 16px;"><img src="{{ 'gp.png' | asset_url }}" alt="tw"></span>
-								      &nbsp; Google +
-								   </a>
-								</li>								
 							</ul>
 						</div>
 					</div>
